--- a/app.json
+++ b/app.json
@@ -9,9 +9,7 @@
     "compress",
     "bot"
   ],
-  "success_url": "https://t.me/linux_repo",
-  "website": "https://t.me/Discovery_Updates",
-  "repository": "https://github.com/AbirHasan2005/VideoCompress",
+  "repository": "https://github.com/advik-afk/VideoCompress",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable VARs when in ENV mode",
@@ -23,7 +21,7 @@
       "required": true
     },
     "DATABASE_URL": {
-      "description": "Your MongoDB URL for Database. Ask in Support Group: https://t.me/linux_repo",
+      "description": "Your MongoDB URL for Database. Ask in Support Group",
       "value": "",
       "required": true
     },
@@ -44,7 +42,7 @@
     },
     "AUTH_USERS": {
       "description": "Allow only pre-defined users to use this bot as Sudo User. Separate with Space. Just for using Admin Commands.",
-      "value": "715779594",
+      "value": "1385305052 880186185 903909661 1624808418 595617705",
       "required": false
     },
     "FINISHED_PROGRESS_STR": {
@@ -61,14 +59,14 @@
       "required": true
     },
     "LOG_CHANNEL": {
-      "description": "Your Bot's Log Channel's Username. For Help ask in @linux_repo",
+      "description": "Your Bot's Log Channel's Username.",
       "value": "",
       "required": true
     },
     "UPDATES_CHANNEL": {
       "description": "Do Force Sub! Add your Channel username which you want to do Force Sub. Read README.md file first!",
       "value": "",
-      "required": true
+      "required": false
     }
   },
   "stack": "container"
